deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gophprofile
  namespace: gophprofile
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: avatars.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  name: http
